<resources>
<!--    attribute values-->
    <string name="app_name">Profil Mahasiswa</string>
    <string name="nama_lengkap">Dimas Miftahul Huda</string>
    <string name="nim">10118087</string>
    <string name="kelas">IF-2</string>
    <string name="jenis_kelamin">Laki-laki</string>
    <string name="tempat_tanggal_lahir">Sumedang, 1 Maret 2000</string>
    <string name="alamat_rumah">Jl. Malaka 4 No. 42, Rorotan, Cilincing, Jakarta Utara</string>
    <string name="golongan_darah">B (Kalau Tidak Salah)</string>
    <string name="makanan_kesukaan">Nasi Putih</string>
    <string name="minuman_kesukaan">Air Putih</string>
    <string name="hobi">Nonton Film</string>
    <string name="lagu_favorit">Halu - Feby Putri</string>
    <string name="film_favorit">Haikyu!!</string>
    <string name="pekerjaan_impian">Software Engineer</string>

<!--    attribute label-->
    <string name="label_nim">NIM</string>
    <string name="label_kelas">Kelas</string>
    <string name="label_jenis_kelamin">Jenis Kelamin</string>
    <string name="label_tempat_tanggal_lahir">Tempat, Tanggal Lahir</string>
    <string name="label_alamat_rumah">Alamat Rumah</string>
    <string name="label_golongan_darah">Golongan Darah</string>
    <string name="label_makanan_kesukaan">Makanan Kesukaan</string>
    <string name="label_minuman_kesukaan">Minuman Kesukaan</string>
    <string name="label_hobi">Hobi</string>
    <string name="label_lagu_favorit">Lagu Favorit</string>
    <string name="label_film_favorit">Film Favorit</string>
    <string name="label_pekerjaan_impian">Pekerjaan Impian</string>
</resources>